refact: fixed responsive spacing issue when missing data from a section

--- a/src/features/overview/components/css/overview_bills_section.css
+++ b/src/features/overview/components/css/overview_bills_section.css
@@ -42,8 +42,9 @@
     }
 }
 
-/* @media(max-width: 600px){
+@media(max-width: 600px){
     .overview-bills-section-container{
-        height: 35%;
+        flex: none;
+        height: 300px;
     }
-} */
+}
