--- a/src/features/overview/overview_view.css
+++ b/src/features/overview/overview_view.css
@@ -8,7 +8,10 @@
 @media(max-width: 1200px) {
     .overview-view-secondary {
         flex-direction: column;
-        min-height:100vh;
+        /* min-height:100vh; */
         gap:16px;
+        flex:1;
+        height: auto;
+
     }
 }
